# tc_compute_api

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_base  LICENSE  README.md  lint.py  logging.ini  logging_prod.ini  pyproject.toml  requirements.txt  start_dev.sh  start_server.sh
api-test-files/: auth.http  auth_callback.http  communication.http  journey.http  journey_item.http  journey_item_version.http  journey_structure.http  journey_template.http  journey_version.http  mailchimp.http  organization.http  organization_user.http  panel.http  profile.http  public_panel.http  push_test.http  test_task.http
app/: server.py
app/auth_routes/: _configurable_fields.py
app/core/: auth_params.py  celery_app.py  config.py  helpers.py  init_app.py  posthog_client.py  redis.py  session_storage.py  supabase.py
app/models/: conversation_data.py  llm_conversation.py  organization.py  organization_user.py  user_data.py
app/routes/: __init__.py  auth.py  communication.py  journey.py  organization.py  organization_user.py  panel.py  profile.py  public_panel.py  system.py
deprecated/api-test-files/: journey.http  journey_item.http  journey_structure.http  journey_structure_version.http  journey_version.http
deprecated/test/: test_journey.py  test_journey_item.py  test_journey_structure_version.py  test_journey_version.py
disabled/helpers/: document_parse.py  document_tools.py  removed-packages.txt
fewshot_data/: guidance.txt  transcript_bridge_writer.txt  transcript_conclusion_short.txt  transcript_conclusion_writer.txt  transcript_intro_short.txt  transcript_intro_writer.txt  transcript_rewriter.txt  transcript_rewriter_extend.txt  transcript_rewriter_reduce.txt  transcript_summary_formatter.txt  transcript_writer.txt
html/morning_show/: index.html
lib/: load_env.py
lib/chains/: base.py  base_parser.py  base_validation.py  hierarchy_compiler.py  init.py  prompt_generator.py  rag_chain.py
lib/helpers/: document_parse.py  document_tools.py  journey.py  panel.py  routes.py  shared.py
lib/llm_exec/: journey_exec.py
lib/models/: conversation_data.py  llm_conversation.py  organization.py  organization_user.py  user.py  user_data.py
lib/prompts/: actions.py  base.py  concepts.py  hallucination.py  journey.py  journey_structured.py  topics.py
lib_js/: ConstantsInterface.ts  constants.d.ts  constants.js  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  supabaseClient.js
lib_js/helpers/: ApiHelper.d.ts  ApiHelper.js  ApiHelperInterfaces.ts  errors.d.ts  errors.js
lib_js/models/: LlmConversationInterfaces.ts  UserInterfaces.ts  llmConversation.js  user.d.ts  user.js
lib_js/tc_api/: CreateUserInterfaces.ts  createUser.d.ts  createUser.js  panel.d.ts  panel.js  panelInterfaces.ts
lib_js/tests/: aclTest.js  authTest.js  journeyItemVersionTest.js  journeyStructureTest.js  journeyStructureVersionTest.js  organizationTest.js  supabaseModelTest.js  userTest.js
source/: load_env.py
source/chains/: __init__.py  base.py  base_parser.py  base_validation.py  chain.py  chain_factory.py  embedding_factory.py  hierarchy_compiler.py  init.py  llm_factory.py  rag_chain.py
source/helpers/: __init__.py  communication.py  document_parse.py  document_tools.py  json_exportable_enum.py  panel.py  resolve_url.py  (+5 more)
test/: test_auth.py  test_fetch_news_links.py  test_journey.py  test_journey_item.py  test_journey_item_version.py  test_journey_structure.py  test_journey_version.py  test_organization.py  test_profile.py  test_send_mail.py
tts_test/: request.json  test.py  text_to_speech.http
(+341 files in other folders)
