[tool.poetry]
name = "tc-compute-api"
version = "0.1.0"
description = ""
authors = ["Markus Haverinen <markus@thirdcognition.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "^0.23.2"
supabase =  {git = "https://github.com/mathatan/supabase-py.git"}
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
toml = "^0.10.2"
azure-identity = "^1.19.0"
beautifulsoup4 = "^4.12.3"
flashrank = "^0.2.9"
fuzzywuzzy = "^0.18.0"
markdown = "^3.7"
playwright = "^1.48.0"
watchdog = "^6.0.0"
langchain = "^0.3.7"
langchain-anthropic = "^0.2.4"
langchain-aws = "^0.2.6"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-experimental = "^0.3.3"
langchain-groq = "^0.2.1"
langchain-huggingface = "^0.1.2"
langchain-openai = "^0.2.5"
langgraph = "^0.2.45"
langserve = "^0.3.0"
langsmith = "^0.1.139"
aiofiles = "^24.1.0"
async-lru = "^2.0.4"
podcastfy = "^0.4.1"
ffmpeg = "^1.4"
celery = "^5.4.0"
redis = "^5.2.1"
flower = "^2.0.1"  # Added Flower for monitoring Celery tasks
aiohttp = "^3.11.10"
pygooglenews =  {git = "https://github.com/thirdcognition/pygooglenews.git"}
lxml = "^5.3.0"
resend = "^2.5.1"
feedparser = "^6.0.11"
croniter = "^6.0.0"
mailchimp-marketing = "^3.0.80"
langchain-google-genai = "^2.0.9"
google-cloud-translate = "^3.20.0"
trafilatura = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
autopep8 = "^2.0.2"
pre-commit = "^3.0.0"
pytest = "<9.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test"
]

[tool.poetry.scripts]
lint = "lint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
